// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display Component does not have data 1`] = `
<div>
  <div
    className="grid-container"
  >
    <div
      className="serviceHeading"
    >
      Service
    </div>
    <div
      className="nameHeading"
    >
      Name
    </div>
    <div
      className="statusHeading"
    >
      Status
    </div>
    <div
      className="statusCodeHeading"
    >
      (Code)
    </div>
    <div
      className="timeHeading"
    >
      Time
    </div>
    <div
      className="messageHeading"
    >
      Message
    </div>
  </div>
</div>
`;

exports[`Display Component does not have executed data 1`] = `
<div>
  <div
    className="grid-container"
  >
    <div
      className="serviceHeading"
    >
      Service
    </div>
    <div
      className="nameHeading"
    >
      Name
    </div>
    <div
      className="statusHeading"
    >
      Status
    </div>
    <div
      className="statusCodeHeading"
    >
      (Code)
    </div>
    <div
      className="timeHeading"
    >
      Time
    </div>
    <div
      className="messageHeading"
    >
      Message
    </div>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="serviceItem"
    >
      Iaptus.Availabilities
    </div>
    <div
      className="nameItem"
    >
      Metrics.AvailabilityCreatedCount
    </div>
    <div
      className="statusItemGreenDot"
    />
    <div
      className="statusCodeItem"
    >
      (
      0
      )
    </div>
    <div
      className="timeItem"
    >
      NO_TIME
    </div>
    <div
      className="messageItem"
    >
      
    </div>
  </div>
</div>
`;

exports[`Display Component does not have name data 1`] = `
<div>
  <div
    className="grid-container"
  >
    <div
      className="serviceHeading"
    >
      Service
    </div>
    <div
      className="nameHeading"
    >
      Name
    </div>
    <div
      className="statusHeading"
    >
      Status
    </div>
    <div
      className="statusCodeHeading"
    >
      (Code)
    </div>
    <div
      className="timeHeading"
    >
      Time
    </div>
    <div
      className="messageHeading"
    >
      Message
    </div>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="serviceItem"
    >
      NO_NAME
    </div>
    <div
      className="nameItem"
    >
      NO_NAME
    </div>
    <div
      className="statusItemGreenDot"
    />
    <div
      className="statusCodeItem"
    >
      (
      0
      )
    </div>
    <div
      className="timeItem"
    >
      8:50:13 7/22/2019
    </div>
    <div
      className="messageItem"
    >
      
    </div>
  </div>
</div>
`;

exports[`Display Component does not have status data 1`] = `
<div>
  <div
    className="grid-container"
  >
    <div
      className="serviceHeading"
    >
      Service
    </div>
    <div
      className="nameHeading"
    >
      Name
    </div>
    <div
      className="statusHeading"
    >
      Status
    </div>
    <div
      className="statusCodeHeading"
    >
      (Code)
    </div>
    <div
      className="timeHeading"
    >
      Time
    </div>
    <div
      className="messageHeading"
    >
      Message
    </div>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="serviceItem"
    >
      Iaptus.Availabilities
    </div>
    <div
      className="nameItem"
    >
      Metrics.AvailabilityCreatedCount
    </div>
    <div
      className="statusItemRedDot"
    />
    <div
      className="statusCodeItem"
    >
      (
      )
    </div>
    <div
      className="timeItem"
    >
      8:50:13 7/22/2019
    </div>
    <div
      className="messageItem"
    >
      sensu.iaptus.bracknell.iaptusvnode14.availability_count.12_gloucester 1 1563781830
...
    </div>
  </div>
</div>
`;

exports[`Display Component matches the snapshot with all data 1`] = `
<div>
  <div
    className="grid-container"
  >
    <div
      className="serviceHeading"
    >
      Service
    </div>
    <div
      className="nameHeading"
    >
      Name
    </div>
    <div
      className="statusHeading"
    >
      Status
    </div>
    <div
      className="statusCodeHeading"
    >
      (Code)
    </div>
    <div
      className="timeHeading"
    >
      Time
    </div>
    <div
      className="messageHeading"
    >
      Message
    </div>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="serviceItem"
    >
      Iaptus.Availabilities
    </div>
    <div
      className="nameItem"
    >
      Metrics.AvailabilityCreatedCount
    </div>
    <div
      className="statusItemGreenDot"
    />
    <div
      className="statusCodeItem"
    >
      (
      0
      )
    </div>
    <div
      className="timeItem"
    >
      8:50:13 7/22/2019
    </div>
    <div
      className="messageItem"
    >
      
    </div>
  </div>
  <div
    className="grid-container"
  >
    <div
      className="serviceItem"
    >
      keepalive
    </div>
    <div
      className="nameItem"
    >
      keepalive
    </div>
    <div
      className="statusItemRedDot"
    />
    <div
      className="statusCodeItem"
    >
      (
      2
      )
    </div>
    <div
      className="timeItem"
    >
      15:37:55 8/12/2019
    </div>
    <div
      className="messageItem"
    >
      No keepalive sent from client for 1838727 seconds (&gt;=180)
    </div>
  </div>
</div>
`;
